--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,12 @@ paginate_path: blog/page:num
 
 # Header nav
 navigation_header:
-- title: Blog
-  url: /blog/
+- title: Home
+  url: /
 - title: About
   url: /about/
+- title: Blog
+  url: /blog/
 
 # Footer nav
 navigation_footer:
